Project overflow correction

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -7,6 +7,7 @@
   overflow: visible;
   background-size: contain;
   background-repeat: no-repeat;
+  overflow-x: hidden;
   h2 {
     padding-bottom: 20px;
     margin: 0px;
